# crypto_trade_bot

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.gmo.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: pull_request_template.md
docs/: README.md  altdata_edge_exploration_plan.md  altdata_edge_findings.md  daily_summary_balance_chart.md  dex_bot_v2_port_plan.md  gmo_bot_direction_2026-06.md  gmo_bot_edge_round2_exploration_plan.md  gmo_bot_edge_round2_findings.md  gmo_bot_edge_round3_exploration_plan.md  gmo_bot_edge_round3_findings.md  gmo_bot_exploration_findings.md  gmo_bot_logic_exploration_plan.md  gmo_bot_logic_exploration_s2_findings.md  gmo_bot_logic_exploration_s3_findings.md  gmo_bot_logic_exploration_s4_findings.md  gmo_bot_mm_round4_exploration_plan.md  gmo_bot_mm_round4_findings.md  gmo_bot_new_edge_exploration_plan.md  gmo_bot_new_edge_findings.md  gmo_bot_performance_report.md  gmo_bot_post_kill_exploration_plan.md  gmo_bot_post_kill_phase1_findings.md  gmo_bot_post_kill_phase2_findings.md  gmo_bot_post_kill_phase3_v_findings.md  gmo_bot_post_kill_postmortem_findings.md  gmo_bot_pre_strategy_review.md  gmo_bot_strategy_revision_plan.md  gmo_bot_strategy_search_v1.md  gmo_bot_strategy_search_v2.md  gmo_bot_v2_improvement_plan.md  gmo_ema_pullback_15m_improvement_plan.md  research_backtest_platform.md  research_backtest_validity.md
pybot/: main.py
reports/: 2026-05-15_gmo_ema_pullback_15m_both_v0.html  (+2 more)
src/: index.ts
(+384 files in other folders)
