[project]
name = "crypto-trade-bot"
version = "1.0.0"
description = "Solana spot trading bot (Python migration)"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "pyarrow>=16.0.0",
    "PyYAML>=6.0",
    "pandas>=2.2",
    "Jinja2>=3.1",
]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
